--- a/index.html
+++ b/index.html
@@ -181,32 +181,32 @@
                     <div style="text-align:center; margin: 1% auto; padding:20px; background-color: rgba(72, 72, 72, 0.5); width: 80%;">
                         <p>DQN on Zed</p>
                         <video width="600" controls>
-                            <source src="/599/DQN for Zed Game.mp4" type="video/mp4">
-                            <source src="/599/DQN for Zed Game.mp4" type="video/ogg">
+                            <source src="/aswaroop.github.io/599/DQN for Zed Game.mp4" type="video/mp4">
+                            <source src="/aswaroop.github.io/599/DQN for Zed Game.mp4" type="video/ogg">
                             Your browser does not support HTML5 video.
                           </video>
                     </div>
                     <div style="text-align:center; margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Color Clustering</p>
                         <video width="600" controls>
-                            <source src="/599/Color Clustering for Scores and Energy Bar.mp4" type="video/mp4">
-                            <source src="/599/Color Clustering for Scores and Energy Bar.mp4" type="video/ogg">
+                            <source src="/aswaroop.github.io/599/Color Clustering for Scores and Energy Bar.mp4" type="video/mp4">
+                            <source src="/aswaroop.github.io/599/Color Clustering for Scores and Energy Bar.mp4" type="video/ogg">
                             Your browser does not support HTML5 video.
                           </video>
                     </div>
                     <div style="text-align:center;margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Actor Critic on Montezuma Game</p>
                         <video width="600" controls>
-                            <source src="/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/mp4">
-                            <source src="/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/ogg">
+                            <source src="/aswaroop.github.io/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/mp4">
+                            <source src="/aswaroop.github.io/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/ogg">
                             Your browser does not support HTML5 video.
                           </video>
                     </div>
                     <div style="text-align:center;margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Actor Critic on Zed</p>
                         <video width="600" controls>
-                            <source src="/599/Actor-Critic on Zed Game.mov" type="video/mp4">
-                            <source src="/599/Actor-Critic on Zed Game.mov" type="video/ogg">
+                            <source src="/aswaroop.github.io/599/Actor-Critic on Zed Game.mov" type="video/mp4">
+                            <source src="/aswaroop.github.io/599/Actor-Critic on Zed Game.mov" type="video/ogg">
                             Your browser does not support HTML5 video.
                           </video>
                     </div>
@@ -215,17 +215,17 @@
         <div id="documentDiv" style="display: none">
             <div class="parallax-wrapper" id="docDiv" style="height: 70vh;">
                 <div class="content"  style="height: 50vh; margin-top: 2%; text-align: center; padding: 30px;">
-                   <a class="col-md-6" href="/599/report.pdf">
+                   <a class="col-md-6" href="/aswaroop.github.io/599/report.pdf">
                         <p style="font-size: 30px; margin-top:5%">Technical Paper</p>
                         <div>
-                            <img src="/599/docu.png" style="width: 60px; height: 60px;">
+                            <img src="/aswaroop.github.io/599/docu.png" style="width: 60px; height: 60px;">
                             <div style="margin-top:2%; font-size: 15px; text-decoration: underline;">Click to download</div>
                         </div>
                     </a>
                     <a class="col-md-6" href="https://drive.google.com/open?id=1Dv_OoDUudzeIIHdaJytagauAvhPtF53n" data-toggle="tooltip" title="Use USC ID for access">
                         <p style="font-size: 30px; margin-top:5%">Final Presentation</p>
                         <div>
-                            <img src="/599/docu.png" style="width: 60px; height: 60px;">
+                            <img src="/aswaroop.github.io/599/docu.png" style="width: 60px; height: 60px;">
                             <div style="margin-top:2%; font-size: 15px; text-decoration: underline;">Click to download</div>
                         </div>
                     </a>
@@ -239,7 +239,7 @@
                     <div class="col-md-4">
                         <a href="https://www.linkedin.com/in/nigrah/">
                             <div class="card" style="text-align: center;padding: 20px;">
-                                <img class="card-img-top" src="/599/nigrah.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
+                                <img class="card-img-top" src="/aswaroop.github.io/599/nigrah.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
                                 <div class="card-body">
                                     <p class="card-text">NIGRAH BAMB</p>
                                 </div>
@@ -249,7 +249,7 @@
                     <div class='col-md-4'>
                         <a href="https://www.linkedin.com/in/yashashah/">
                             <div class="card" style="text-align: center;padding: 20px;">
-                                <img class="card-img-top" src="/599/shah.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
+                                <img class="card-img-top" src="/aswaroop.github.io/599/shah.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
                                 <div class="card-body">
                                     <p class="card-text">YASH SHAH</p>
                                 </div>
@@ -259,7 +259,7 @@
                     <div class='col-md-4'>
                         <a href="https://www.linkedin.com/in/namanmgupta/">
                             <div class="card" style="text-align: center;padding: 20px;">
-                                <img class="card-img-top" src="/599/naman.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
+                                <img class="card-img-top" src="/aswaroop.github.io/599/naman.jpeg" alt="Card image cap" style="border-radius:100px; height: 150px;">
                                 <div class="card-body">
                                     <p class="card-text">NAMAN GUPTA</p>
                                 </div>
@@ -271,7 +271,7 @@
                     <div class='col-md-6'>
                         <a href="https://www.linkedin.com/in/mitali-mehta-b044a053/">
                             <div class="card" style="text-align: center;padding: 20px;">
-                                <img class="card-img-top" src="/599/mits.jpg" alt="Card image cap" style="border-radius:100px; height: 150px;">
+                                <img class="card-img-top" src="/aswaroop.github.io/599/mits.jpg" alt="Card image cap" style="border-radius:100px; height: 150px;">
                                 <div class="card-body">
                                     <p class="card-text">MITALI MEHTA</p>
                                 </div>
@@ -281,7 +281,7 @@
                     <div class='col-md-6'>
                         <a href="https://www.linkedin.com/in/aditi-swaroop-517308/">
                             <div class="card" style="text-align: center;padding: 20px;">
-                                <img class="card-img-top" src="/599/dits.jpg" alt="Card image cap" style="border-radius:100px; height: 150px;">
+                                <img class="card-img-top" src="/aswaroop.github.io/599/dits.jpg" alt="Card image cap" style="border-radius:100px; height: 150px;">
                                 <div class="card-body">
                                     <p class="card-text">ADITI SWAROOP</p>
                                 </div>
