Youtubr videos added

--- a/index.html
+++ b/index.html
@@ -180,35 +180,25 @@
             <div id="videoDiv" style="height: 175vh; display: none;">
                     <div style="text-align:center; margin: 1% auto; padding:20px; background-color: rgba(72, 72, 72, 0.5); width: 80%;">
                         <p>DQN on Zed</p>
-                        <video width="600" controls>
-                            <source src="/aswaroop.github.io/599/DQN for Zed Game.mp4" type="video/mp4">
-                            <source src="/aswaroop.github.io/599/DQN for Zed Game.mp4" type="video/ogg">
-                            Your browser does not support HTML5 video.
-                          </video>
+                        <iframe width="600" height="315"
+                        src="https://youtube.embed/1UpzoJ98sTM">
+                        </iframe>
                     </div>
                     <div style="text-align:center; margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Color Clustering</p>
-                        <video width="600" controls>
-                            <source src="/aswaroop.github.io/599/Color Clustering for Scores and Energy Bar.mp4" type="video/mp4">
-                            <source src="/aswaroop.github.io/599/Color Clustering for Scores and Energy Bar.mp4" type="video/ogg">
-                            Your browser does not support HTML5 video.
-                          </video>
+                        <iframe width="600" height="315" src="https://www.youtube.com/embed/_FPOKv-zgrA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div style="text-align:center;margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Actor Critic on Montezuma Game</p>
-                        <video width="600" controls>
-                            <source src="/aswaroop.github.io/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/mp4">
-                            <source src="/aswaroop.github.io/599/Actor-Critic Augmented for Montezuma Atari Game.mp4" type="video/ogg">
-                            Your browser does not support HTML5 video.
-                          </video>
+                        <iframe width="600" height="315"
+                            src="https://youtube.com/embed/KqP2xQjD3zk">
+                        </iframe>
                     </div>
                     <div style="text-align:center;margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Actor Critic on Zed</p>
-                        <video width="600" controls>
-                            <source src="/aswaroop.github.io/599/Actor-Critic on Zed Game.mov" type="video/mp4">
-                            <source src="/aswaroop.github.io/599/Actor-Critic on Zed Game.mov" type="video/ogg">
-                            Your browser does not support HTML5 video.
-                          </video>
+                        <iframe width="600" height="315"
+                            src="https://youtube.com/embed/lYHA_8bejoU">
+                        </iframe>
                     </div>
             </div>
         </div>
