Youtube URL fix

--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
             <div id="videoDiv" style="height: 175vh; display: none;">
                     <div style="text-align:center; margin: 1% auto; padding:20px; background-color: rgba(72, 72, 72, 0.5); width: 80%;">
                         <p>DQN on Zed</p>
-                        <iframe width="600" height="315"
-                        src="https://youtube.embed/1UpzoJ98sTM">
-                        </iframe>
+                        <iframe width="600" height="315" src="https://www.youtube.com/embed/56RGHNh8FBY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div style="text-align:center; margin: 1% auto; background-color: rgba(72, 72, 72, 0.5); width: 80%;padding:20px; ">
                         <p>Color Clustering</p>
